--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "https://github.com/AmericasTopWebDev/Personal-Site-03-23",
   "name": "info-site",
   "version": "0.1.0",
+  "homepage": "https://americastopwebdev.github.io/Personal-Site-03-23/",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.0",
